commit le front

--- a/Logos_Front/src/main/webapp/accueil_professeur.xhtml
+++ b/Logos_Front/src/main/webapp/accueil_professeur.xhtml
@@ -6,6 +6,7 @@
 	<title> Connection </title>
 </head>
 <body>
- <h1>Tu es un prof et tu es sur ta page d'accueil</h1>
+ <h1>Tu es un prof et tu es sur ta page d'accueil</h1><br />
+  <h:commandButton action="#{loginMB.SeDeconnecter()}" value="Se déconnecter" />
 </body>
 </html>
