--- a/Logos_Front/src/main/webapp/accueil_eleve.xhtml
+++ b/Logos_Front/src/main/webapp/accueil_eleve.xhtml
@@ -5,8 +5,10 @@
 	<head>
 	<title> Connection </title>
 </head>
+<f:event listener="#{loginMB.verifierConnectedEleve}" type="preRenderView" />
+
 <body>
  <h1>Tu es un élève et tu es sur ta page d'accueil</h1><br />
- <h:commandButton action="#{loginMB.SeDeconnecter()}" value="Se déconnecter" />
+ <h:commandButton action="#{loginMB.seDeconnecter()}" value="Se déconnecter" />
 </body>
 </html>
