--- a/Logos_Front/src/main/webapp/login.xhtml
+++ b/Logos_Front/src/main/webapp/login.xhtml
@@ -13,7 +13,7 @@
 				<h:inputText value="#{loginMB.login}" /><br/>
 				<label>Mot de passe : </label>
 				<h:inputSecret value="#{loginMB.password}" />
-				<h:commandButton action="#{loginMB.SeConnecter()}" value="Se connecter" />
+				<h:commandButton action="#{loginMB.seConnecter()}" value="Se connecter" />
 			</h:form>
 		</div>
 	</div>
