--- a/Logos_Front/src/main/webapp/accueil_eleve.xhtml
+++ b/Logos_Front/src/main/webapp/accueil_eleve.xhtml
@@ -4,10 +4,16 @@
       xmlns:f="http://java.sun.com/jsf/core">
 	<head>
 	<title> Connection </title>
+	 <f:metadata>
+<f:event listener="#{filtreMB.verifierConnectedEleve}" type="preRenderView" />
+ </f:metadata>
 </head>
-<f:event listener="#{loginMB.verifierConnectedEleve}" type="preRenderView" />
+
 
 <body>
+
+
+
  <h1>Tu es un élève et tu es sur ta page d'accueil</h1><br />
  <h:commandButton action="#{loginMB.seDeconnecter()}" value="Se déconnecter" />
 </body>
