--- a/Logos_Front/src/main/webapp/accueil_professeur.xhtml
+++ b/Logos_Front/src/main/webapp/accueil_professeur.xhtml
@@ -5,8 +5,13 @@
 	<head>
 	<title> Connection </title>
 </head>
-<f:event listener="#{loginMB.verifierConnectedProfesseur}" type="preRenderView" />
+
 <body>
+<f:view>
+ <f:metadata>
+<f:event listener="#{filtreMB.verifierConnectedProfesseur}" type="preRenderView" />
+ </f:metadata>
+ </f:view>
  <h1>Tu es un prof et tu es sur ta page d'accueil</h1><br />
   <h:commandButton action="#{loginMB.seDeconnecter()}" value="Se déconnecter" />
 </body>
