commit filtre connexion qui marche

--- a/Logos_Front/src/main/webapp/accueil_eleve.xhtml
+++ b/Logos_Front/src/main/webapp/accueil_eleve.xhtml
@@ -1,12 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
-	<head>
-	<title> Connection </title>
-	 <f:metadata>
-<f:event listener="#{filtreMB.verifierConnectedEleve}" type="preRenderView" />
- </f:metadata>
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core">
+<head>
+<title>Connection</title>
+<f:metadata>
+	<f:event listener="#{filtreMB.verifierConnectedEleve}"
+		type="preRenderView" />
+</f:metadata>
 </head>
 
 
@@ -14,7 +15,10 @@
 
 
 
- <h1>Tu es un élève et tu es sur ta page d'accueil</h1><br />
- <h:commandButton action="#{loginMB.seDeconnecter()}" value="Se déconnecter" />
+	<h1>Tu es un élève et tu es sur ta page d'accueil</h1>
+	<br />
+	<h:form>
+		<h:commandButton action="#{loginMB.seDeconnecter()}" value="Se déconnecter" />
+	</h:form>
 </body>
 </html>
