--- a/Logos_Front/src/main/webapp/inscription_eleve.xhtml
+++ b/Logos_Front/src/main/webapp/inscription_eleve.xhtml
@@ -8,7 +8,13 @@
 	<title>Inscription Logos</title>
 </h:head>
 <body>
+	<!--  
+		Réveil du loginMB
+		<h:outputText value="#{loginMB.loggedIn}" />
+	-->
 	<h1>Inscription</h1>
+	
+	
 	<fieldset>
 		<h:form styleClass="form" >
 			<span>NOM : </span>
