--- a/Logos_Front/src/main/webapp/WEB-INF/template-prof.xhtml
+++ b/Logos_Front/src/main/webapp/WEB-INF/template-prof.xhtml
@@ -13,12 +13,15 @@
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0, shrink-to-fit=no"></meta>
 	<ui:insert name="scriptsEtCss" />
+	<f:metadata>
+		<f:event listener="#{filtreMB.verifierConnectedProfesseur}"
+			type="preRenderView" />
+	</f:metadata>
 </h:head>
-
 <body>
 	<div class="container-fluid">
 		<div class="row">
-			<div id="aside" class="col-sm-2">
+			<div id="aside" class="col-sm-2 prof">
 				<h:form>
 					<div id="asideContent">
 						<div id="divLogin">
@@ -30,21 +33,27 @@
 							<img id="profilPicture"
 								src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREGFIu103swa_lNxgruLW21Mzkdp7W7hSVqP9mqZTRWb_imuC_"
 								alt="image_profil" />
-							<p>#{loginMB.userConnected.prenom} #{loginMB.userConnected.nom}</p>
+							<p>#{loginMB.userConnected.prenom}
+								#{loginMB.userConnected.nom}</p>
+							<p>Vous avez un resultat pourri</p>
 						</div>
 						<div id="nav">
 							<ul id="profilMenu">
 								<li><span class="glyphicon glyphicon-copy"></span>Suivi</li>
 								<li><span class="glyphicon glyphicon-book"></span>Cours</li>
-								<li><span class="glyphicon glyphicon-envelope"></span>Messages</li>
+								<li><span class="glyphicon glyphicon-envelope"></span>Messages
+									<p id="newMessages">55</p></li>
+								<li><span class="glyphicon glyphicon-edit"></span>Corrections
+									<p id="newCorrections">128</p></li>
 							</ul>
 						</div>
 					</div>
 				</h:form>
 			</div>
-			<div class="col-sm-10">JJJJJJJJJJJJSSSSSSSSSSSSFFFFFFFFF</div>
+			<div class="col-sm-10">
+				<ui:insert name="contenu" />
+			</div>
 		</div>
-
 	</div>
 </body>
 </html>
