--- a/Logos_Front/src/main/webapp/inscription_cours.xhtml
+++ b/Logos_Front/src/main/webapp/inscription_cours.xhtml
@@ -1,19 +1,73 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html"> 
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
 	<title>Inscription A Cours</title>
-</h:head> 
-<body> 
+</h:head>
+<body>
+	<table>
+		<tr>
+			<td><h:outputLabel value="Mes Cours" /></td>
+			<td><h:outputLabel value="Avancement" /></td>
+		</tr>
+		<ui:repeat var="c" value="#{mbInscriptionCours.coursEleve}">
+			<tr>
+				<td><h:outputLabel value="#{c.titre}" /></td>
+			</tr>
+		</ui:repeat>
+	</table>
 	<h1>Liste des Cours</h1>
-	<div id="cours" >
-		<ui:repeat var="c" value="#{mbInscriptionCours.courses}">
-			<h:outputLabel value="#{c.titre}" />
-			<h:commandButton action="#{mbInscriptionCours.inscrireACours()}" value="S'inscrire" /><br/>
+	<div id="cours_recommandes">
+		<h2>Cours recommandés</h2>
+		<ui:repeat var="c" value="#{mbInscriptionCours.coursesR}">
+			<h:form>
+				<h:outputLabel value="#{c.titre}" />
+				<h:outputLabel value="#{mbInscriptionCours.noteCours(c)}" />
+				<h:commandButton action="#{mbInscriptionCours.inscrireACours(c)}"
+					value="S'inscrire" />
+				<br />
+			</h:form>
 		</ui:repeat>
 	</div>
-</body> 
+	<div id="cours_langue">
+		<h2>Cours par langue</h2>
+		<h:form>
+			<h:selectOneMenu value="#{mbInscriptionCours.langue}">
+				<f:selectItems value="#{mbInscriptionCours.langues}" var="langue"
+					itemLabel="#{langue}" itemValue="#{langue}" />
+			</h:selectOneMenu>
+			<h:commandButton action="#{mbInscriptionCours.getCoursByLangue()}"
+				value="Rechercher" />
+		</h:form>
+		<ui:repeat var="c" value="#{mbInscriptionCours.coursesL}">
+			<h:outputLabel value="#{c.titre}" />
+			<h:outputLabel value="#{mbInscriptionCours.noteCours(c)}" />
+			<h:commandButton action="#{mbInscriptionCours.inscrireACours(c)}"
+				value="S'inscrire" />
+		</ui:repeat>
+	</div>
+	<div id="cours_categorie">
+		<h2>Cours par Catégorie</h2>
+		<h:form>
+			<select name="##{mbInscriptionCours.categorie}" is="categorie">
+				<option value="grammaire">Grammaire</option>
+				<option value="vocabulaire">Vocabulaire</option>
+				<option value="conjugaison">Conjugaison</option>
+				<option value="traduction">Traduction</option>
+				<option value="version">Version</option>
+			</select>
+			<h:commandButton action="#{mbInscriptionCours.getCoursByCategorie()}"
+				value="Rechercher" />
+		</h:form>
+		<ui:repeat var="c" value="#{mbInscriptionCours.coursesC}">
+			<h:outputLabel value="#{c.titre}" />
+			<h:outputLabel value="#{mbInscriptionCours.noteCours(c)}" />
+			<h:commandButton action="#{mbInscriptionCours.inscrireACours(c)}"
+				value="S'inscrire" />
+		</ui:repeat>
+	</div>
+</body>
 </html>
