--- a/Logos_Front/src/main/webapp/login.xhtml
+++ b/Logos_Front/src/main/webapp/login.xhtml
@@ -4,19 +4,46 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 <head>
 <title>Connection</title>
+<link rel="stylesheet" href="css/style.css" type="text/css" />
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+<meta name="viewport"
+	content="width=device-width, initial-scale=1.0, shrink-to-fit=no"></meta>
 </head>
 <body>
-	<div id="page">
-		<div id="header">
-			<h:form>
-				<label>Login : </label>
-				<h:inputText value="#{loginMB.login}" /><br/>
-				<label>Mot de passe : </label>
-				<h:inputSecret value="#{loginMB.password}" />
-				<h:commandButton action="#{loginMB.seConnecter()}" value="Se connecter" />
+	<div id="login_page" class="container-fluid">
+		<div id="login_header">
+
+			<h:form class="form-horizontal">
+				<div class="form-group">
+					<label for="login" class="col-sm-offset-2 col-sm-2 control-label">Login</label>
+					<div class="col-sm-4">
+						<h:inputText styleClass="form-control" id="login"
+							placeholder="Login" value="#{loginMB.login}" />
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="inputPassword3" class="col-sm-offset-2 col-sm-2 control-label">Password</label>
+					<div class="col-sm-4">
+						<h:inputSecret styleClass="form-control" id="inputPassword3"
+							placeholder="Mot de passe" value="#{loginMB.password}" />
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-5 col-sm-4">
+						<h:commandButton styleClass="btn btn-default"
+							action="#{loginMB.seConnecter()}" value="Se connecter" />
+					</div>
+				</div>
 			</h:form>
+
 		</div>
 	</div>
+
+
+
+
+
 
 </body>
 </html>
