--- a/Logos_Front/src/main/webapp/inscription_cours.xhtml
+++ b/Logos_Front/src/main/webapp/inscription_cours.xhtml
@@ -6,6 +6,7 @@
 
 <h:head>
 	<title>Inscription A Cours</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
 </h:head>
 <body>
 	<table>
@@ -53,7 +54,8 @@
 	<div id="cours_categorie">
 		<h2>Cours par Catégorie</h2>
 		<h:form>
-			<select name="##{mbInscriptionCours.categorie}" is="categorie">
+		
+			<select name="##{mbInscriptionCours.categorie}" id="categorie">
 				<option value="grammaire">Grammaire</option>
 				<option value="vocabulaire">Vocabulaire</option>
 				<option value="conjugaison">Conjugaison</option>
