css template et inscription

--- a/Logos_Front/src/main/webapp/WEB-INF/template-eleve.xhtml
+++ b/Logos_Front/src/main/webapp/WEB-INF/template-eleve.xhtml
@@ -18,7 +18,7 @@
 			type="preRenderView" />
 	</f:metadata>
 </h:head>
-<body>
+<body class="window">
 	<div class="container-fluid">
 		<div class="row">
 			<div id="aside" class="col-sm-2 eleve">
@@ -47,7 +47,7 @@
 								<li><span class="glyphicon glyphicon-copy"></span>Suivi</li>
 								<li><span class="glyphicon glyphicon-book"></span>Cours</li>
 								<li><span class="glyphicon glyphicon-envelope"></span>Messages
-									<p id="newMessages">55</p></li>
+									<p class="badge">55</p></li>
 							</ul>
 						</div>
 						<div id="divPremium">
