--- a/Logos_Front/src/main/webapp/WEB-INF/template-prof.xhtml
+++ b/Logos_Front/src/main/webapp/WEB-INF/template-prof.xhtml
@@ -18,7 +18,7 @@
 			type="preRenderView" />
 	</f:metadata>
 </h:head>
-<body>
+<body class="window">
 	<div class="container-fluid">
 		<div class="row">
 			<div id="aside" class="col-sm-2 prof">
@@ -42,9 +42,9 @@
 								<li><span class="glyphicon glyphicon-copy"></span>Suivi</li>
 								<li><span class="glyphicon glyphicon-book"></span>Cours</li>
 								<li><span class="glyphicon glyphicon-envelope"></span>Messages
-									<p id="newMessages">55</p></li>
+									<p class="badge">55</p></li>
 								<li><span class="glyphicon glyphicon-edit"></span>Corrections
-									<p id="newCorrections">128</p></li>
+									<p class="badge">128</p></li>
 							</ul>
 						</div>
 					</div>
