--- a/Logos_Front/src/main/webapp/login.xhtml
+++ b/Logos_Front/src/main/webapp/login.xhtml
@@ -10,11 +10,11 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, shrink-to-fit=no"></meta>
 </head>
-<body>
+<body id="loginWindow">
 	<div id="login_page" class="container-fluid">
 		<div id="login_header">
 
-			<h:form class="form-horizontal col-sm-offset-4 col-sm-4">
+			<h:form class="loginform form-horizontal col-sm-4">
 				<div class="form-group">
 					<label for="login" class="col-sm-offset-2 col-sm-2">Login</label>
 					<div class="col-sm-6">
