--- a/Logos_Front/src/main/webapp/inscription_cours2.xhtml
+++ b/Logos_Front/src/main/webapp/inscription_cours2.xhtml
@@ -1,17 +1,18 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html"> 
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
-<title>Inscription A Cours</title>
+	<title>Inscription A Cours</title>
 	<link rel="stylesheet" href="../css/bootstrap.min.css" />
 	<script src="../js/jquery.js"></script>
 	<script src="../js/bootstrap.min.js"></script>
-</h:head> 
-<body> 
-<table>
+</h:head>
+<body>
+<h:form>
+	<table>
 		<tr>
 			<td><h:outputLabel value="Mes Cours" /></td>
 			<td><h:outputLabel value="Avancement" /></td>
@@ -22,7 +23,7 @@
 			</tr>
 		</ui:repeat>
 	</table>
-	
+
 	<h1>Liste des Cours</h1>
 	<div id="cours_recommandes">
 		<h2>Cours recommandés</h2>
@@ -36,20 +37,40 @@
 			</h:form>
 		</ui:repeat>
 	</div>
-	
-<div>
-	<ul class="nav nav-tabs" role="tablist">
-		<li class="active" role="presentation"><a href="#anglais" aria-controls="anglais" role="tab" data-toggle="tab">Anglais</a></li>
-		<li class="" role="presentation"><a href="#espagnol" aria-controls="espagnol" role="tab" data-toggle="tab">Espagnol</a></li>
-		<li class="" role="presentation"><a href="#chinois" aria-controls="chinois" role="tab" data-toggle="tab">Chinois</a></li>
-	</ul>
-	
-	<div class="tab-content cours" >
-		<div  role="tabpanel" class="tab-pane active" id="anglais">TEst anglais</div>
-		<div  role="tabpanel" class="tab-pane" id="espagnol">TEst espagnol</div>
-		<div  role="tabpanel" class="tab-pane" id="chinois">TEst chinois</div>
+
+	<div>
+		<ul class="nav nav-tabs" role="tablist">
+			<ui:repeat var="l" value="#{mbInscriptionCours.langues}">
+			
+				<li class='#{l eq mbInscriptionCours.langueCourante ? "active" : ""}' role="presentation"><h:commandLink action="#{mbInscriptionCours.changerLangue(l)}" value="#{l.libelle}" /></li>
+				
+			</ui:repeat>
+		</ul>
+
+		<div class="tab-content cours">
+			<div role="tabpanel" class="tab-pane active" >
+
+				<ui:repeat var="c"
+					value="#{mbInscriptionCours.coursCategorie.entrySet().toArray()}">
+					<div>
+						<h:outputLabel value="#{c.key.titre}" />
+						<br />
+						<ui:repeat var="cc" value="#{c.value}">
+							<h:form>
+								<h:outputLabel value="#{cc.titre}" />
+								<h:outputLabel value="#{mbInscriptionCours.noteCours(cc)}" />
+								<h:commandButton
+									action="#{mbInscriptionCours.inscrireACours(cc)}"
+									value="S'inscrire" />
+							</h:form>
+						</ui:repeat>
+					</div>
+				</ui:repeat>
+			</div>
+
+		</div>
+
 	</div>
-</div>
-	
-</body> 
+</h:form>
+</body>
 </html>
