--- a/Logos_Front/src/main/webapp/WEB-INF/template-prof.xhtml
+++ b/Logos_Front/src/main/webapp/WEB-INF/template-prof.xhtml
@@ -7,9 +7,10 @@
 	xmlns:h="http://java.sun.com/jsf/html">
 <h:head>
 	<title><ui:insert name="titre" /></title>
+	<link rel="stylesheet" href="../css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
-	<link rel="stylesheet"
-		href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+	<script src="../js/jquery.js"></script>
+	<script src="../js/bootstrap.min.js"></script>
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0, shrink-to-fit=no"></meta>
 	<ui:insert name="scriptsEtCss" />
