--- a/Logos_Front/src/main/webapp/inscription_cours2.xhtml
+++ b/Logos_Front/src/main/webapp/inscription_cours2.xhtml
@@ -13,6 +13,7 @@
 	<ui:composition template="/WEB-INF/template-eleve.xhtml">
 		<ui:define name="titre">Bienvenue</ui:define>
 		<ui:define name="contenu">
+<!-- 		<h:outputLabel value="#{mbConsulteCours.chapitreEnCours}" /> -->
 			<h:form id="inscription_cours" name="inscription_cours">
 				<div id="mesCours">
 					<div id="myCours">
