--- a/Logos_Front/src/main/webapp/inscription_cours2.xhtml
+++ b/Logos_Front/src/main/webapp/inscription_cours2.xhtml
@@ -5,13 +5,9 @@
 	xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
-	<title>Inscription A Cours</title>
-	<link rel="stylesheet" href="../css/bootstrap.min.css" />
-	<link rel="stylesheet" href="../css/style.css" type="text/css" />
-	<script src="../js/jquery.js"></script>
-	<script src="../js/bootstrap.min.js"></script>
+
 	<ui:composition template="/WEB-INF/template-eleve.xhtml">
-		<ui:define name="titre">Bienvenue</ui:define>
+		<ui:define name="titre">Inscription à un cours</ui:define>
 		<ui:define name="contenu">
 <!-- 		<h:outputLabel value="#{mbConsulteCours.chapitreEnCours}" /> -->
 			<h:form id="inscription_cours" name="inscription_cours">
