--- a/Logos_Front/src/main/webapp/WEB-INF/template-eleve.xhtml
+++ b/Logos_Front/src/main/webapp/WEB-INF/template-eleve.xhtml
@@ -32,28 +32,28 @@
 						</div>
 						<div id="profil">
 							<img id="profilPicture"
-								src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREGFIu103swa_lNxgruLW21Mzkdp7W7hSVqP9mqZTRWb_imuC_"
+								src="../images/icone-test-eleve.jpg"
 								alt="image_profil" />
 							<p>#{loginMB.userConnected.prenom}
 								#{loginMB.userConnected.nom}</p>
 							<div id="niveaux_eleve">
 								<ul>
-									<li>Français B2</li>
-									<li>Anglais C1</li>
+									<li><span class="glyphicon glyphicon-ok"></span> Français B2</li>
+									<li><span class="glyphicon glyphicon-ok"></span> Anglais C1</li>
 								</ul>
 							</div>
 						</div>
 						<div id="nav">
 							<ul id="profilMenu">
-								<li><span class="glyphicon glyphicon-copy"></span>Suivi</li>
-								<li><span class="glyphicon glyphicon-book"></span>Cours</li>
-								<li><span class="glyphicon glyphicon-envelope"></span>Messages
-									<p class="badge">55</p></li>
+								<li><span class="glyphicon glyphicon-copy"></span> Suivi</li>
+								<li><span class="glyphicon glyphicon-book"></span> Cours</li>
+								<li><span class="glyphicon glyphicon-envelope"></span> Messages
+									<span class="badge">55</span></li>
 							</ul>
 						</div>
 						<div id="divPremium">
 							<span class="glyphicon glyphicon-star-empty" />
-							<p>Devenez premium</p>
+							<div>Devenez premium</div>
 						</div>
 					</div>
 				</h:form>
