--- a/Logos_Front/src/main/webapp/inscription_cours2.xhtml
+++ b/Logos_Front/src/main/webapp/inscription_cours2.xhtml
@@ -12,8 +12,8 @@
 			<!-- 		<h:outputLabel value="#{mbConsulteCours.chapitreEnCours}" /> -->
 			<h:form id="inscription_cours" name="inscription_cours">
 
-				<div id="mesCours">
-					<div id="myCours">
+				<div id="mes-cours">
+					<div id="my-cours">
 						<h2>Vos Cours</h2>
 						<ui:repeat var="c" value="#{mbInscriptionCours.coursEleve}">
 							<h:commandLink action="#{mbConsulteCours.consulterCours(c)}"
