questionafficher en partie

--- a/Logos_Front/src/main/webapp/cours.xhtml
+++ b/Logos_Front/src/main/webapp/cours.xhtml
@@ -41,6 +41,7 @@
 							</h:panelGroup>
 							<h:panelGroup rendered="#{q['class'].simpleName == 'QuestionATrous'}">
 								<h5>#{q.enonce}</h5>
+								<p>question a trous</p>
 							</h:panelGroup>
 							<h:panelGroup rendered="#{q['class'].simpleName == 'QuestionDragAndDrop'}">
 								<h5>#{q.enonce}</h5>
