--- a/Logos_Front/src/main/webapp/messagerie.xhtml
+++ b/Logos_Front/src/main/webapp/messagerie.xhtml
@@ -6,32 +6,38 @@
 <ui:composition template="/WEB-INF/template-eleve.xhtml">
 	<ui:define name="titre">Bienvenue</ui:define>
 	<ui:define name="contenu">
-		<div class="">
-			<div> Conversation entre lo et vic </div>
-			<div> message 1</div>
-			<div> message 2</div>
-			<div> message 3</div>
-			<div> message 4</div>
-			<div>
-				<form>
-					<input type="text"/>
-					<button> Envoyer </button>
-				</form>
+		<div class="conversation">
+			<div class="messages">
+				<div id="titreConversation">"#{messagerieMB.conversationEnCours.titre}"</div>
+				<ui:repeat var="c" value="#{messagerieMB.allMessagesByConversation}">
+					<div class="message">
+						<h:outputLabel class="nomAuteur"
+							value="#{c.auteur.prenom} #{c.auteur.nom}" />
+						<h:outputLabel class="contenuMessage" value="#{c.contenu}" />
+					</div>
+				</ui:repeat>
+			</div>
+			<div class="ecrireMessage">
+				<h:form>
+					<h:inputText value="#{messagerieMB.message.contenu}" />
+					<h:commandButton action="#{messagerieMB.envoyerMessage()}"
+						value="Envoyer" />
+				</h:form>
 			</div>
 		</div>
-		<div>
-			<ul>
-				<li> Conversation 1</li>
-				<li> Conversation 2</li>
-				<li> Conversation 3</li>
-			</ul>
+		<div class="conversations">
+			<ui:repeat var="c" value="#{messagerieMB.allConversationsByUser}">
+				<div class="conversation">
+					<h:commandLink action="#{messagerieMB.changerConversation(c)}"
+						class="conversationTitle" value="#{c.titre}">
+						<ui:repeat var="u" value="#{c.utilisateurs}">
+							<h:outputLabel class="conversationParticipants"
+								value="#{u.prenom} #{u.nom}" />
+						</ui:repeat>
+					</h:commandLink>
+				</div>
+			</ui:repeat>
 		</div>
-		
-
-
-
-
-
 	</ui:define>
 </ui:composition>
 </html>
